# torpedo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  env-linux.yml  env-win64.yml  environment.yml
demo/: CMakeLists.txt  README.md
demo/HelloGaussian/: CMakeLists.txt  main.cpp
demo/HelloTriangle/: CMakeLists.txt  main.cpp
demo/ModelLoading/: main.cpp
demo/PhongCube/: CMakeLists.txt  main.cpp
demo/VolumeSplatting/: CMakeLists.txt  main.cpp
tordemo/: CMakeLists.txt  main.cpp  main.h
tordemo/HelloTriangle/: CMakeLists.txt  main.cpp
tordemo/ModelLoading/: CMakeLists.txt  ModelLoader.h  main.cpp
tordemo/PhongCube/: CMakeLists.txt  main.cpp
tordemo/TexturedCube/: CMakeLists.txt  main.cpp
tordemo/assets/shaders/: blank.frag  simple.frag  simple.vert  textured.frag  textured.vert
tordemo/dev/: CMakeLists.txt  ModelLoader.cpp  main.cpp
tordemo/src/: HelloTriangle.cpp  HelloTriangle.h  TexturedCube.cpp  TexturedCube.h  TordemoApplication.cpp  TordemoApplication.h
torpedo/: CMakeLists.txt
torpedo/bootstrap/: CMakeLists.txt
torpedo/bootstrap/include/torpedo/bootstrap/: DebugUtils.h  DeviceBuilder.h  InstanceBuilder.h  PhysicalDeviceSelector.h  SamplerBuilder.h  ShaderModuleBuilder.h  SwapChainBuilder.h  Utils.h
torpedo/bootstrap/src/: DebugUtils.cpp  DeviceBuilder.cpp  InstanceBuilder.cpp  PhysicalDeviceSelector.cpp  SamplerBuilder.cpp  ShaderModuleBuilder.cpp  SwapChainBuilder.cpp  Utils.cpp
torpedo/core/: CMakeLists.txt
torpedo/core/include/torpedo/core/: DeviceBuilder.h  InstanceBuilder.h  PhysicalDeviceSelector.h
torpedo/core/src/: DeviceBuilder.cpp  InstanceBuilder.cpp  PhysicalDeviceSelector.cpp
torpedo/differential/: CMakeLists.txt
torpedo/differential/include/torpedo/differential/: GaussianRasterizer.h
torpedo/differential/src/: GaussianRasterizer.cpp
torpedo/extension/: CMakeLists.txt
torpedo/extension/include/torpedo/extension/: OrbitControl.h  PerspectiveCamera.h
torpedo/extension/src/: OrbitControl.cpp  PerspectiveCamera.cpp
torpedo/foundation/: CMakeLists.txt
torpedo/foundation/include/torpedo/foundation/: Allocation.h  AllocationUtils.h  Buffer.h  DeviceAllocator.h  Image.h  ImageUtils.h  PipelineInstance.h  PipelineShader.h  ReadbackBuffer.h  ResourceAllocator.h  RingBuffer.h  ShaderInstance.h  ShaderLayout.h  StagingBuffer.h  StorageBuffer.h  StorageImage.h  Sync.h  SyncResource.h  Target.h  Texture.h  TransferWorker.h  TwoWayBuffer.h  VmaUsage.h
torpedo/foundation/src/: Allocation.cpp  AllocationUtils.cpp  Buffer.cpp  DeviceAllocator.cpp  Image.cpp  ImageUtils.cpp  PipelineInstance.cpp  PipelineShader.cpp  ReadbackBuffer.cpp  ResourceAllocator.cpp  RingBuffer.cpp  ShaderInstance.cpp  ShaderLayout.cpp  StagingBuffer.cpp  StorageBuffer.cpp  StorageImage.cpp  Sync.cpp  SyncResource.cpp  Target.cpp  Texture.cpp  TransferWorker.cpp  TwoWayBuffer.cpp  VmaUsage.cpp
torpedo/graphics/: CMakeLists.txt  README.md
torpedo/graphics/assets/shaders/: graphics.vert  phong.frag
torpedo/graphics/include/torpedo/camera/: PerspectiveCamera.h
torpedo/graphics/include/torpedo/control/: OrbitControl.h
torpedo/graphics/include/torpedo/geometry/: CubeGeometryBuilder.h
torpedo/graphics/include/torpedo/graphics/: Camera.h  Composable.h  Context.h  Control.h  Drawable.h  Engine.h  Geometry.h  Light.h  Material.h  MaterialInstance.h  Renderer.h  Scene.h  Texture.h  View.h
torpedo/graphics/include/torpedo/light/: AmbientLight.h  DirectionalLight.h  DistantLight.h  PointLight.h
torpedo/graphics/include/torpedo/material/: PhongMaterial.h  PhongMaterialInstance.h
torpedo/graphics/include/torpedo/renderer/: ForwardRenderer.h  StandardRenderer.h
torpedo/graphics/src/: Camera.cpp  Composable.cpp  Context.cpp  Control.cpp  Drawable.cpp  Engine.cpp  Geometry.cpp  Light.cpp  Material.cpp  MaterialInstance.cpp  Renderer.cpp  Scene.cpp  Texture.cpp  View.cpp
torpedo/graphics/src/camera/: PerspectiveCamera.cpp
torpedo/graphics/src/control/: OrbitControl.cpp
torpedo/graphics/src/geometry/: CubeGeometryBuilder.cpp
torpedo/graphics/src/light/: AmbientLight.cpp  DirectionalLight.cpp  DistantLight.cpp  PointLight.cpp
torpedo/graphics/src/material/: PhongMaterial.cpp  PhongMaterialInstance.cpp
torpedo/graphics/src/renderer/: ForwardRenderer.cpp  ForwardRenderer.h  StandardRenderer.cpp  StandardRenderer.h
torpedo/graphics/src/renderer/raster/: ForwardRenderer.cpp  ForwardRenderer.h  RasterRenderer.cpp  RasterRenderer.h
torpedo/math/: CMakeLists.txt
torpedo/math/include/torpedo/math/: common.h  mat2.h  mat3.h  mat4.h  transform.h  vec2.h  vec3.h  vec4.h
torpedo/math/src/: vec2.cpp  vec3.cpp  vec4.cpp
torpedo/rendering/: CMakeLists.txt
torpedo/rendering/include/torpedo/rendering/: Camera.h  Context.h  Control.h  DeletionWorker.h  Engine.h  ForwardEngine.h  HeadlessRenderer.h  LogUtils.h  Renderer.h  Scene.h  StandardRenderer.h  SurfaceRenderer.h  SyncGroup.h  TransferWorker.h  (+2 more)
torpedo/rendering/src/: Camera.cpp  Context.cpp  Control.cpp  DeletionWorker.cpp  Engine.cpp  ForwardEngine.cpp  HeadlessRenderer.cpp  LogUtils.cpp  Renderer.cpp  Scene.cpp  StandardRenderer.cpp  SurfaceRenderer.cpp  SyncGroup.cpp  TransferWorker.cpp  TransformHost.cpp  Utils.cpp
torpedo/utility/: CMakeLists.txt
torpedo/utility/src/: Log.cpp
torpedo/utils/: CMakeLists.txt
torpedo/utils/src/: Log.cpp
torpedo/volumetric/: CMakeLists.txt
torpedo/volumetric/assets/gaussian/: blend.slang  clear.slang  coalesce.slang  forward.slang  keygen.slang  prefix.slang  project.slang  radix-binning.slang  radix-coalesce.slang  radix-mapping.slang  radix-prefix-A.slang  radix-prefix.slang  radix-prefixA.slang  radix-prefixB.slang  radix-shuffle.slang  radix-upfront.slang  radix.slang  range.slang  splat.slang
torpedo/volumetric/assets/shaders/: 3dgs.comp  3dgs.slang
torpedo/volumetric/assets/slang/: 3DGS.slang  dupkeys.slang  forward.slang  keygen.slang  prefix.slang  prepare.slang  prework.slang  radix.slang  range.slang  reduce.slang  splat.slang  splatting.slang  utils.slang
torpedo/volumetric/src/: GaussianEngine.cpp  GaussianGeometry.cpp
(+18 files in other folders)
